<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConversorDeTemperatura">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@color/purple_200">

        <LinearLayout
            android:id="@+id/containerTemperatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/txtTemperatura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"

                android:text="@string/temperatura"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <EditText
                android:id="@+id/edtTemperatura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@color/cardview_shadow_start_color"

                android:hint="Digite a temperatura"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/purple_500"
                android:textSize="30sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/containerTemperatura"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnCelcius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_converter_celcius_fahrenheit" />

            <Button
                android:id="@+id/btnFahrenheit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_converter_fahrenheit_celcius" />

            <Button
                android:id="@+id/btnLimpar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_limpar"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerResposta"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/containerButtons"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTituloResposta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/resposta"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtResposta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"

                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/purple_500"
                android:textSize="25sp" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>